--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -7,7 +7,7 @@ metadata:
 stringData:
     SECRET_ROOT_DOMAIN: ENC[AES256_GCM,data:Eg1+1RvfhpXoIFLXCnRVe7+A,iv:6VXFs5mvC+Aa75FA5GcRhU6nvME5fQQYqeHnkFE/03Y=,tag:UkoQTIeT88JuZ4TO7i97qg==,type:str]
     SECRET_DOMAIN: ENC[AES256_GCM,data:VSGcfIVpDv5IGmggPF28YlFP4LrF8Q==,iv:hpkGZHu1uzmZTR0eL0bn1w22W1ip5XB5hyQUV5n/v08=,tag:AgwJXK1LjrkqysCaonnLrA==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:tXKhOMiWvdSvh4VbfA3hKGH0QCUv/9Pi,iv:Rf/d0iRi1e5j/uxe4Jc+syqyX0CrtM6mqicF9CNdMUs=,tag:J3gHoViuOe5JldKe8da0iQ==,type:str]
+    SECRET_EMAIL: ENC[AES256_GCM,data:c3vdFOsZEO5tHwiKfSAby/fJKLFdG6Wr,iv:asyUsV4Wjoh50DvlgBX7ipUEySZdPFUkqeVRfDYmdKI=,tag:bZ8XdY7gvduisuZV2wXC8A==,type:str]
     SECRET_PLEX_CLAIM_TOKEN: ENC[AES256_GCM,data:uekA7Tvb8EsGAaKyrG4HfR49OkAzKE5JS0w=,iv:Mh3fLX+knG82Ep8zyDeUVMCgsMSMsW1w2iN1w5NsgAk=,tag:KMoBkabdFkQ98MSn5U06Rw==,type:str]
     SECRET_MINIO_ACCESS_KEY: ENC[AES256_GCM,data:3iY4gng=,iv:dtue/HqxpH545PKoxB8aAfgiGKXzyXvFopMgFlo78fA=,tag:LeKi4Dbd3U2UnG3ip5JUMg==,type:str]
     SECRET_MINIO_SECRET_KEY: ENC[AES256_GCM,data:pdqk1RCffW03Ikyb7g1qLC+ugSM=,iv:bo6OLDUaC84dqajUX7WiQXFfTXOzdhQ2xZ5Ztz3X6Pk=,tag:BvyZOhrNmAojKQ+5AX25PQ==,type:str]
@@ -26,8 +26,8 @@ sops:
             aFZoWWozRks3aDUwanpQanRGNG55YTAK78zzVPikMVd+Lw6W6ySD5utOFM65uAKK
             dVyYa7NeAQjTL9/p/XMt3HEkysHnyi7740zb3k9jfvPy6OSNBFWjkw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-05-20T17:55:01Z"
-    mac: ENC[AES256_GCM,data:J7ILXXnO3TQOu+dtpEKlvfYlxQ5RbJjfqokm3ujVWDh7aeSddeXN3W7bnNO4oTnTjnE4Clsjf3IGdnAzSRrTi1YynDW4Fa0T6naHMSfZF2L9eN6uEkEapIPwrh9HIvhWUGo7+U8UqW/7NtcXkcmFqbUfrrBcUlsZ+0moD2Up13E=,iv:8lri8toP2sD2Snog7NTm5eYRuQqPcHbLXj06DLYClTs=,tag:nQ6ojrYQR2Pu5cn+PwmsSA==,type:str]
+    lastmodified: "2022-05-20T20:37:02Z"
+    mac: ENC[AES256_GCM,data:LuhLd/blb1/iCWC3ozR8UPUCQvpvaOjQXGqzoVDd1VD06brwr/ZKte36He9/QnjlgaQD5BXmVNhbBVjdqfyw8aRUATiYRBYG1Mow8rdopttDAgDHhXfeLoAJiMzv2BZLpfwT9LoVD/Uon8pFNvOPfW85Z8NGgtfDmwWxg2s4VUs=,iv:josNO6vD2jN+F/NwqXBp7uG7SR0cBhkjsZ1nGoBfHMA=,tag:gYSKGv8FatZ/Rr57BV31Og==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
