--- a/cluster/apps/networking/traefik/external/blueiris.yaml
+++ b/cluster/apps/networking/traefik/external/blueiris.yaml
@@ -5,16 +5,30 @@ metadata:
   name: external-blueiris
   namespace: networking
   annotations:
-    #cert-manager.io/cluster-issuer: "letsencrypt-production"
     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
 spec:
   ingressClassName: "traefik"
-  tls:
-    - hosts:
-        - blueiris.${SECRET_DOMAIN}
-      #secretName: external-blueiris-tls
-      #secretName omitted to use default wildcard certificate
   rules:
+  - host: blueiris.${SECRET_ROOT_DOMAIN}
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: external-blueiris
+            port:
+              number: 81
+  - host: blueiris.home.${SECRET_ROOT_DOMAIN}
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: external-blueiris
+            port:
+              number: 81
   - host: blueiris.${SECRET_DOMAIN}
     http:
       paths:
