--- a/cluster/apps/networking/traefik/service-monitor.yaml
+++ b/cluster/apps/networking/traefik/service-monitor.yaml
@@ -11,7 +11,7 @@ spec:
   selector:
     matchLabels:
       app.kubernetes.io/instance: traefik
-      app.kubernetes.io/name: traefik-dashboard
+      app.kubernetes.io/name: traefik
   namespaceSelector:
     matchNames:
       - networking
