add tolerations to key items for thin-client

--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -24,6 +24,11 @@ spec:
       retries: 5
   values:
     fullnameOverride: prom-stack
+    nodeExporter:
+    tolerations:
+        - key: "thin-client"
+          operator: "Exists"
+          effect: "NoExecute"
     alertmanager:
       config:
         global:
