--- a/cluster/apps/monitoring/loki/promtail.yaml
+++ b/cluster/apps/monitoring/loki/promtail.yaml
@@ -22,6 +22,9 @@ spec:
       operator: "Exists"
     - key: "node-role.kubernetes.io/master"
       operator: "Exists"
+    - key: "thin-client"
+      operator: "Exists"
+      effect: "NoExecute"
     config:
       lokiAddress: http://loki:3100/loki/api/v1/push
       snippets:
