--- a/cluster/core/metallb-system/helm-release.yaml
+++ b/cluster/core/metallb-system/helm-release.yaml
@@ -16,6 +16,11 @@ spec:
         name: metallb-charts
         namespace: flux-system
   values:
+    speaker:
+      tolerations:
+        - key: "thin-client"
+          operator: "Exists"
+          effect: "NoExecute"
     configInline:
       address-pools:
         - name: default
