--- a/cluster/apps/kube-system/node-feature-discovery/helm-release.yaml
+++ b/cluster/apps/kube-system/node-feature-discovery/helm-release.yaml
@@ -28,6 +28,10 @@ spec:
         configmap.reloader.stakater.com/reload: node-feature-discovery-worker-conf
       #nodeSelector:
       #  node-role.kubernetes.io/worker: "true"
+      tolerations:
+        - key: "thin-client"
+          operator: "Exists"
+          effect: "NoExecute"
       config:
         core:
           sources:
