add toleration for zwave on thin-client

--- a/cluster/apps/home/zwavejs2mqtt/helm-release.yaml
+++ b/cluster/apps/home/zwavejs2mqtt/helm-release.yaml
@@ -70,6 +70,10 @@ spec:
                   operator: In
                   values:
                     - "true"
+    tolerations:
+      - key: "thin-client"
+        operator: "Exists"
+        effect: "NoExecute"
     resources:
       requests:
         cpu: 100m
