--- a/cluster/apps/media/trunk-recorder/kustomization.yaml
+++ b/cluster/apps/media/trunk-recorder/kustomization.yaml
@@ -2,4 +2,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ssh://git@github.com/jp83/trunk-recorder-config/
+  - ssh://git@github.com:jp83/trunk-recorder-config.git
