--- a/cluster/apps/monitoring/goldilocks/helm-release.yaml
+++ b/cluster/apps/monitoring/goldilocks/helm-release.yaml
@@ -8,6 +8,7 @@ spec:
   interval: 5m
   chart:
     spec:
+      # renovate: registryUrl=https://charts.fairwinds.com/stable
       chart: goldilocks
       version: 6.1.2
       sourceRef:
