--- a/cluster/apps/monitoring/vpa/helm-release.yaml
+++ b/cluster/apps/monitoring/vpa/helm-release.yaml
@@ -8,6 +8,7 @@ spec:
   interval: 5m
   chart:
     spec:
+      # renovate: registryUrl=https://charts.fairwinds.com/stable
       chart: vpa
       version: 1.3.1
       sourceRef:
