--- a/cluster/apps/kasten-io/k10/helm-release.yaml
+++ b/cluster/apps/kasten-io/k10/helm-release.yaml
@@ -39,19 +39,19 @@ spec:
     clusterName: k3s-home
     ingress:
       create: true
-      #class: traefik
+      class: traefik
       ingressClassName: "traefik"
       annotations:
         traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
         traefik.ingress.kubernetes.io/router.middlewares: "networking-internal-only@kubernetescrd"
       host: "k10.${SECRET_DOMAIN}"
-      #urlPath: /
-      #pathType: Prefix
-      hosts:
-          - host: "k10.${SECRET_DOMAIN}"
-            paths:
-              - path: /
-                pathType: Prefix
+      urlPath: /k10
+      pathType: Prefix
+      #hosts:
+      #    - host: "k10.${SECRET_DOMAIN}"
+      #      paths:
+      #        - path: /
+      #          pathType: Prefix
       #hosts:
       #  - *host
       #tls:
