--- a/cluster/apps/kasten-io/k10/helm-release.yaml
+++ b/cluster/apps/kasten-io/k10/helm-release.yaml
@@ -40,7 +40,7 @@ spec:
     ingress:
       create: true
       class: traefik
-      ingressClassName: "traefik"
+      #ingressClassName: "traefik"
       annotations:
         cert-manager.io/cluster-issuer: "letsencrypt-production"
         traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
@@ -61,13 +61,13 @@ spec:
       #  secretName: "${SECRET_PUBLIC_DOMAIN/./-}-tls"
     grafana:
       enabled: false
-  postRenderers:
-  - kustomize:
-      patchesJson6902:
-      - target:
-          kind: Ingress
-          name: k10-ingress
-        patch:
-        - op: add
-          path: /spec/ingressClassName
-          value: traefik
+  # postRenderers:
+  # - kustomize:
+  #     patchesJson6902:
+  #     - target:
+  #         kind: Ingress
+  #         name: k10-ingress
+  #       patch:
+  #       - op: add
+  #         path: /spec/ingressClassName
+  #         value: traefik
