--- a/cluster/apps/kasten-io/k10/helm-release.yaml
+++ b/cluster/apps/kasten-io/k10/helm-release.yaml
@@ -39,8 +39,9 @@ spec:
     clusterName: k3s-home
     ingress:
       create: true
-      class: traefik
+      #class: traefik
       #ingressClassName: "traefik"
+      #doesn't work see below post render
       annotations:
         cert-manager.io/cluster-issuer: "letsencrypt-production"
         traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
@@ -61,13 +62,13 @@ spec:
       #  secretName: "${SECRET_PUBLIC_DOMAIN/./-}-tls"
     grafana:
       enabled: false
-  # postRenderers:
-  # - kustomize:
-  #     patchesJson6902:
-  #     - target:
-  #         kind: Ingress
-  #         name: k10-ingress
-  #       patch:
-  #       - op: add
-  #         path: /spec/ingressClassName
-  #         value: traefik
+  postRenderers:
+  - kustomize:
+      patchesJson6902:
+      - target:
+          kind: Ingress
+          name: k10-ingress
+        patch:
+        - op: add
+          path: /spec/ingressClassName
+          value: traefik
