--- a/cluster/apps/kasten-io/k10/policies/kustomization.yaml
+++ b/cluster/apps/kasten-io/k10/policies/kustomization.yaml
@@ -2,6 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - helm-release.yaml
-  - policies
-  - profiles
+  - backup-all-pvc.yaml
+  - home.yaml
+  - k10-dr-policy.yaml
+  - media.yaml
