exclude nfs pvc from media backup

--- a/cluster/apps/kasten-io/k10/policies/media.yaml
+++ b/cluster/apps/kasten-io/k10/policies/media.yaml
@@ -11,6 +11,14 @@ spec:
         profile:
           name: media
           namespace: kasten-io
+        filters:
+          includeResources: []
+          excludeResources:
+            - group: ""
+              version: ""
+              resource: persistentvolumeclaims
+              name: nfs-media-pvc
+              matchExpressions: []
   frequency: '@hourly'
   retention:
     hourly: 4
