k10 policies to export to nfs

--- a/cluster/apps/kasten-io/k10/policies/backup-all-pvc.yaml
+++ b/cluster/apps/kasten-io/k10/policies/backup-all-pvc.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   comment: Policy to backup all resources daily.  Daily snapshot/backup
   frequency: "@daily"
+  paused: true
   subFrequency:
     minutes:
       - 0
