--- a/cluster/apps/kasten-io/k10/policies/media.yaml
+++ b/cluster/apps/kasten-io/k10/policies/media.yaml
@@ -19,6 +19,14 @@ spec:
               resource: persistentvolumeclaims
               name: nfs-media-pvc
               matchExpressions: []
+    - action: export
+      exportParameters:
+        frequency: "@daily"
+        profile:
+          name: media
+          namespace: kasten-io
+        exportData:
+          enabled: true
   frequency: '@hourly'
   retention:
     hourly: 4
