--- a/cluster/apps/home/esphome/helm-release.yaml
+++ b/cluster/apps/home/esphome/helm-release.yaml
@@ -3,9 +3,10 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: esphome
+  #name: &app esphome
   namespace: home
 spec:
-  interval: 5m
+  interval: 15m
   chart:
     spec:
       chart: esphome
@@ -15,22 +16,34 @@ spec:
         name: k8s-at-home-charts
         namespace: flux-system
       interval: 5m
+  # chart:
+  #   spec:
+  #     chart: kah-common-chart
+  #     version: 1.1.2
+  #     sourceRef:
+  #       kind: HelmRepository
+  #       name: k8s-at-home-charts
+  #       namespace: flux-system
+  #     interval: 15m
   install:
     createNamespace: true
   values:
+    #global:
+    #  nameOverride: *app
     image:
-      repository: esphome/esphome
+      repository: ghcr.io/esphome/esphome
       tag: 2022.5.1
     env:
       TZ: "${TIMEZONE}"
+      ESPHOME_DASHBOARD_USE_PING: "true"
     #envFrom:
     #  - secretRef:
     #      name: esphome-secrets
-    service:
-      main:
-        ports:
-          http:
-            port: 6052
+    #service:
+    #  main:
+    #    ports:
+    #      http:
+    #        port: 6052
     ingress:
       main:
         enabled: true
@@ -55,4 +68,4 @@ spec:
         cpu: 100m
         memory: 500Mi
       limits:
-        memory: 500Mi
+        memory: 1000Mi
