--- a/cluster/apps/home/esphome/helm-release.yaml
+++ b/cluster/apps/home/esphome/helm-release.yaml
@@ -36,6 +36,8 @@ spec:
     env:
       TZ: "${TIMEZONE}"
       ESPHOME_DASHBOARD_USE_PING: "true"
+    hostNetwork: true
+    dnsPolicy: ClusterFirstWithHostNet
     #envFrom:
     #  - secretRef:
     #      name: esphome-secrets
