--- a/cluster/apps/kasten-io/k10/profiles/k10-disaster-recovery.yaml
+++ b/cluster/apps/kasten-io/k10/profiles/k10-disaster-recovery.yaml
@@ -8,7 +8,7 @@ spec:
   locationSpec:
     type: FileStore
     fileStore:
-      claimName: k10-backups
+      claimName: nfs-backup-k10-pvc
       path: k10-disaster-recovery
     credential:
       secretType: ""
