--- a/cluster/apps/kasten-io/k10/profiles/nfs-backup-k10-pv.yaml
+++ b/cluster/apps/kasten-io/k10/profiles/nfs-backup-k10-pv.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: k10-backups
+  name: nfs-backup-k10-pv
 spec:
-  storageClassName: k10-backup-nfs
+  storageClassName: nfs-backup-k10
   capacity:
     storage: 1Mi
   accessModes:
@@ -17,12 +17,12 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: k10-backups
+  name: nfs-backup-k10-pvc
   namespace: kasten-io
 spec:
   accessModes:
     - ReadWriteMany
-  storageClassName: k10-backup-nfs
+  storageClassName: nfs-backup-k10
   resources:
     requests:
       storage: 1Mi
