--- a/cluster/apps/kasten-io/k10/policies/kustomization.yaml
+++ b/cluster/apps/kasten-io/k10/policies/kustomization.yaml
@@ -2,7 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - backup-all-pvc.yaml
-  - home.yaml
+  - hourly-backup.yaml
+  - daily-export.yaml
   - k10-dr-policy.yaml
-  - media.yaml
