--- a/cluster/apps/kasten-io/k10/profiles/kustomization.yaml
+++ b/cluster/apps/kasten-io/k10/profiles/kustomization.yaml
@@ -2,8 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - all-pvc.yaml
-  - home.yaml
+  - exports.yaml
   - k10-disaster-recovery.yaml
-  - k10-nfs-pv.yaml
-  - media.yaml
+  - nfs-backup-k10-pv.yaml
