ansible add github ssh keys to hosts

--- a/provision/ansible/inventory/group_vars/kubernetes/ubuntu.yml
+++ b/provision/ansible/inventory/group_vars/kubernetes/ubuntu.yml
@@ -3,4 +3,5 @@
 # timezone: "America/New_York"
 
 # (list) Additional ssh public keys to add to the nodes
-# ssh_authorized_keys:
+ssh_authorized_keys:
+  - https://github.com/jp83.keys
