--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -152,31 +152,31 @@ spec:
     kubeApiServer:
       enabled: true
     kubeControllerManager:
-      enabled: true
+      enabled: false
       endpoints:
         - 192.168.2.85
         - 192.168.2.86
         - 192.168.2.77
       service:
-        enabled: true
+        enabled: false
         port: 10257
         targetPort: 10257
       serviceMonitor:
-        enabled: true
+        enabled: false
         https: true
         insecureSkipVerify: true
     kubeScheduler:
-      enabled: true
+      enabled: false
       endpoints:
         - 192.168.2.85
         - 192.168.2.86
         - 192.168.2.77
       service:
-        enabled: true
+        enabled: false
         port: 10259
         targetPort: 10259
       serviceMonitor:
-        enabled: true
+        enabled: false
         https: true
         insecureSkipVerify: true
     kubeProxy:
