--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -29,6 +29,8 @@ spec:
         - key: "thin-client"
           operator: "Exists"
           effect: "NoExecute"
+        - effect: "NoSchedule"
+          operator: "Exists"
     alertmanager:
       config:
         global:
