prom node exporter tolerations

--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -24,10 +24,10 @@ spec:
       retries: 5
   values:
     fullnameOverride: prom-stack
-    # prometheus-node-exporter:
-    #   tolerations:
-    #     - effect: NoSchedule
-    #       operator: Exists
+    prometheus-node-exporter:
+      tolerations:
+        - effect: NoSchedule
+          operator: Exists
     #     - key: "thin-client"
     #       operator: "Exists"
     #       effect: "NoExecute"
