--- a/cluster/base/cluster-settings.yaml
+++ b/cluster/base/cluster-settings.yaml
@@ -12,4 +12,5 @@ data:
   METALLB_HOME_ASSISTANT_ADDR: 192.168.2.182
   METALLB_EMQX_ADDR: 192.168.2.183
   METALLB_SYSLOG_ADDR: 192.168.2.184
+  METALLB_NUT_ADDR: 192.168.2.185
   NAS_ADDR: 192.168.2.10
