--- a/cluster/apps/home/nut/helm-release.yaml
+++ b/cluster/apps/home/nut/helm-release.yaml
@@ -158,6 +158,7 @@ spec:
 
         nut.conf: |
           MODE=netclient
+          ALLOW_NO_DEVICE=true
 
         upsmon.conf: |
           MONITOR ups-1@nut-master.home.svc.cluster.local 1 upsmon secret slave
@@ -171,21 +172,3 @@ spec:
         cpu: 25m
       limits:
         memory: 128Mi
-    persistence:
-      ups:
-        enabled: true
-        type: hostPath
-        # -- The path of the usb ups on the host.
-        hostPath: /dev/usb/hiddev0
-        # /dev/bus/usb/001/005
-        # -- Optional path for ups to mount in the container.
-        mountPath: /dev/usb/hiddev0
-        # /dev/bus/usb/001/001
-        readOnly: false
-    metrics:
-      enabled: true
-      serviceMonitor:
-        interval: 15s
-        scrapeTimeout: 10s
-      prometheusRule:
-        enabled: true
