--- a/cluster/apps/home/nut/helm-release.yaml
+++ b/cluster/apps/home/nut/helm-release.yaml
@@ -153,6 +153,7 @@ spec:
             enabled: false
           server:
             enabled: false
+            port: 3493
     # The main configuration files for network-ups-tools
     config:
       # If set to 'values', the configuration will be read from these values.
