nut slave disable probes

--- a/cluster/apps/home/nut/helm-release.yaml
+++ b/cluster/apps/home/nut/helm-release.yaml
@@ -158,7 +158,7 @@ spec:
       files:
         nut.conf: |
           MODE=netclient
-          ALLOW_NO_DEVICE=true
+          ALLOW_NO_DEVICE=false
 
         dummy-ups.dev: |
           # nothing
@@ -177,7 +177,13 @@ spec:
           # DEADTIME 25
           # MAXAGE 25
           SHUTDOWNCMD "/usb/bin/logger Simulated Shutdown"
-
+    probes:
+      liveness:
+        enabled: false
+      readiness:
+        enabled: false
+      startup:
+        enabled: false
     resources:
       requests:
         memory: 64Mi
