--- a/cluster/apps/monitoring/loki/promtail.yaml
+++ b/cluster/apps/monitoring/loki/promtail.yaml
@@ -25,7 +25,8 @@ spec:
       - key: "thin-client"
         operator: "Exists"
     config:
-      lokiAddress: http://loki:3100/loki/api/v1/push
+      clients:
+        - url: http://loki:3100/loki/api/v1/push
       snippets:
         extraScrapeConfigs: |
           - job_name: journal
